--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 pytest = "^7.2.1"
 django = "^4.1.5"
+django-rest-framework = "^0.1.0"
+factory-boy = "^3.2.1"
 
 
 [build-system]
